@@ -1,0 +1,20 @@
+﻿
+Microsoft Visual Studio Solution File, Format Version 10.00
+# Visual Studio 2008
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "DlrBinaryExpressions", "DlrBinaryExpressions.csproj", "{ACE0A602-CCE7-446D-B3B5-060F57D6A193}"
+EndProject
+Global
+	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Debug|Any CPU = Debug|Any CPU
+		Release|Any CPU = Release|Any CPU
+	EndGlobalSection
+	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{ACE0A602-CCE7-446D-B3B5-060F57D6A193}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{ACE0A602-CCE7-446D-B3B5-060F57D6A193}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{ACE0A602-CCE7-446D-B3B5-060F57D6A193}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{ACE0A602-CCE7-446D-B3B5-060F57D6A193}.Release|Any CPU.Build.0 = Release|Any CPU
+	EndGlobalSection
+	GlobalSection(SolutionProperties) = preSolution
+		HideSolutionNode = FALSE
+	EndGlobalSection
+EndGlobal
